1.6 - 
 * New notifications system to support latest Chrome versions
 
1.5 - 08 Aug 2013
 * Update listener script to match Deezer update

1.3/1.4 - 30 May 2013
 * Correctly extend the show function to avoid breaking the jQuery chaining

1.2 - 
 * Song and artist names are now links to their respective pages
 * It's now possible to skin the notifications
 * Don't preload notifications covers if not needed
 * Correctly monitor play / pause changes

1.1 - 27 Jan 2013
 * Fixed https://bitbucket.org/metoule/deezer_control/issue/1/package-incorrect

1.0 - 19 Nov 2012
 * Replaced badge text from NEW to version to work around bug https://code.google.com/p/chromium/issues/detail?id=154270 
 * Rewrote options' page explanation text
 * Improved Deezer tab mechanism to allow reuse
 * Bug fixes for notif always on: close notif if no Deezer tab opened / re-open notif if closed
 * Added jump to Deezer feature

0.1.5 - 05 Oct 2012
 * Fixed typo in french locale

0.1.4 - 28 Sep 2012 
 * Updated style to latest Deezer one
 * Improved the way deezer tabs are counted to avoid the empty popup symptom

0.1.3 - 21 Jul 2012
 * Bubble mouse event on notif mouse over to correctly show cursor on buttons

0.1.2 - 19 Jul 2012 
 * Stop notification timer on mouse over

0.1.1 - 19 Jul 2012
 * Added hot keys support
 * Improved local storage for easier default values
 * Improved notification system to be displayable on hot keys only 
 * Options.html migrated to jQuery
 * Pre cache album covers for faster display
 * Fixed flickering on popup load if change of CSS needed

0.0.8 - 03 Mar 2012 
 * Added script to ease delivery

0.0.7 - 03 Mar 2012
 * Use data-i18n-content in HTML tags to be HTML5 compliant
 * Improved popup display time by using a workaround for bug http://crbug.com/24467
 * Changed default image to an empty CD
 * Change event to listen to in player_listener, from unload to beforeunload, so that we're guaranteed to be called

0.0.6 - 19 Feb 2012
 * Improved notifications mechanism
