@@ -1,9 +1,9 @@
 <html>
 	<head>
-	    <script type="text/javascript" src="/scripts/localstorage.js"></script>
-        <script type="text/javascript" src="/scripts/notifications.js"></script>
+		<script type="text/javascript" src="/scripts/localstorage.js"></script>
+		<script type="text/javascript" src="/scripts/notifications.js"></script>
 		<script type="text/javascript" src="/scripts/jquery-1.7.2.min.js"></script>
-	    <script type="text/javascript" src="/scripts/background.js"></script>
+		<script type="text/javascript" src="/scripts/background.js"></script>
 	</head>
 	<body>
 	
