@@ -3,28 +3,28 @@
   "version": "1.5",
   "name": "__MSG_extName__",
   "description": "__MSG_extDesc__",
-  "browser_action": {
-                        "default_icon": "imgs/icons/deezer_19x19.png", 
-                        "default_title": "__MSG_defaultTitle__"
-                    },
+  "browser_action":	{
+						"default_icon": "imgs/icons/deezer_19x19.png", 
+						"default_title": "__MSG_defaultTitle__"
+					},
   "background": { "page": "background.html" },
   "options_page": "options.html",
-  "content_scripts": [
-                         {
-                             "all_frames": false,
-                             "matches": [ "http://*.deezer.com/*" ],
-                             "js": [ "scripts/player_listener.js" ],
-                             "run_at": "document_end"
-                         }
-                     ],
+  "content_scripts":	[
+							{
+								"all_frames": false,
+								"matches": [ "http://*.deezer.com/*" ],
+								"js": [ "scripts/player_listener.js" ],
+								"run_at": "document_end"
+							}
+						],
   "default_locale": "en", 
-  "permissions": [ 
-                     "tabs"
-                 ],
-  "content_security_policy": "default-src 'self'; style-src 'self' 'unsafe-inline'; img-src 'self' http://cdn-images.deezer.com/images/cover/;",  
+  "permissions":	[ 
+						"tabs"
+					],
+  "content_security_policy": "default-src 'self'; style-src 'self' 'unsafe-inline'; img-src 'self' http://cdn-images.deezer.com/images/cover/;",
   "optional_permissions": [ "notifications", "<all_urls>" ],
-  "icons": {  "16": "imgs/icons/deezer_16x16.png",
-              "48": "imgs/icons/deezer_48x48.png",
-             "128": "imgs/icons/deezer_128x128.png" 
-           }
+  "icons": {	"16": "imgs/icons/deezer_16x16.png",
+				"48": "imgs/icons/deezer_48x48.png",
+				"128": "imgs/icons/deezer_128x128.png" 
+			  }
 }
