@@ -27,25 +27,25 @@
 				<h1 data-i18n-content="options_page_tab_welcome_h1"></h1>
 				<div data-i18n-content="options_page_tab_welcome_content_present"></div>
 				<ul>
-              <li data-i18n-content="options_page_tab_welcome_content_item_1"></li>
-              <li data-i18n-content="options_page_tab_welcome_content_item_2"></li>
-              <li data-i18n-content="options_page_tab_welcome_content_item_3"></li>
-              <li data-i18n-content="options_page_tab_welcome_content_item_4"></li>
+					<li data-i18n-content="options_page_tab_welcome_content_item_1"></li>
+					<li data-i18n-content="options_page_tab_welcome_content_item_2"></li>
+					<li data-i18n-content="options_page_tab_welcome_content_item_3"></li>
+					<li data-i18n-content="options_page_tab_welcome_content_item_4"></li>
 				</ul>
 				<div id="remember_to">
 					<h2 data-i18n-content="options_page_tab_welcome_remember_to"></h2>
 					<div><a id="button_rate_extension" data-i18n-content="options_page_tab_welcome_button_rate_extension" target="_blank"></a><span data-i18n-content="options_page_tab_welcome_rate_label"></span></div>
 					<div><a id="button_donate" data-i18n-content="options_page_tab_welcome_donate_button" href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=K5THDKB5BN992" target="_blank"></a><span data-i18n-content="options_page_tab_welcome_donate_label"></span></div>
 				</div>
-            <div><span data-i18n-content="options_page_tab_welcome_contact_me_at"></span>: <a href="mailto:m520152112e@gmail.com" target="_blank">m520152112e@gmail.com</a></div>
+				<div><span data-i18n-content="options_page_tab_welcome_contact_me_at"></span>: <a href="mailto:m520152112e@gmail.com" target="_blank">m520152112e@gmail.com</a></div>
 			</section>
 		
 		
 			<!-- Option tab: style chooser -->
 			<section id="popup_style">
 				<h1 data-i18n-content="options_page_tab_popup_style_h1"></h1>
-            <div data-i18n-content="options_page_tab_popup_what_are_popups"></div>
-            <br/>
+				<div data-i18n-content="options_page_tab_popup_what_are_popups"></div>
+				<br/>
 				<span class="emphasis" data-i18n-content="options_page_tab_popup_style_choose_style"></span>:
 				<select id="popup_style_chooser">
 		 			<option value="large" data-i18n-content="options_page_tab_popup_style_style_large"></option>
@@ -151,17 +151,17 @@
 						<span class="warning"></span>
 					</div>
 					
-               <h2 data-i18n-content="options_page_tab_hotkeys_jumpToDeezerHotKey_h2"></h2>
-               <div style="margin-top: -10px; font-style: italic;" data-i18n-content="options_page_tab_hotkeys_warning_jumpToDeezerHotKey"></div>
-               <div id="jumpToDeezerHotKey">
-                  <button class="two_state_unselected">SHIFT</button>
-                  <button class="two_state_unselected">CTRL</button>
-                  <button class="two_state_unselected">ALT</button>
-                  <button class="two_state_selected"></button>
-                  <input type="text"></input>
-                  <input type="text"></input>
-                  <span class="warning"></span>
-               </div>
+					<h2 data-i18n-content="options_page_tab_hotkeys_jumpToDeezerHotKey_h2"></h2>
+					<div style="margin-top: -10px; font-style: italic;" data-i18n-content="options_page_tab_hotkeys_warning_jumpToDeezerHotKey"></div>
+					<div id="jumpToDeezerHotKey">
+						<button class="two_state_unselected">SHIFT</button>
+						<button class="two_state_unselected">CTRL</button>
+						<button class="two_state_unselected">ALT</button>
+						<button class="two_state_selected"></button>
+						<input type="text"></input>
+						<input type="text"></input>
+						<span class="warning"></span>
+					</div>
 
 					<div class="save_cancel_bar">
 						<button id="button_save_hotkeys" data-i18n-content="options_page_button_save"></button>
@@ -179,7 +179,7 @@
 				
 				<h2 data-i18n-content="options_page_tab_notifs_show_notifs_when_title"></h2>
 					
-            <fieldset>
+				<fieldset>
 					<input type="radio" name="notifs_show_when" value="never" id="notifs_show_never"/>
 					<label for="notifs_show_never" data-i18n-content="options_page_tab_notifs_show_never"></label>
 					<span class="warning" id='chrome_permission_not_granted' data-i18n-content="options_page_tab_notifs_chrome_permission_not_granted"></span>
@@ -202,22 +202,22 @@
 						<input type="range" id="notifs_fade_away_delay" min="1" max="10" step="0.5" value="3"></input>
 						<span id="notifs_fade_away_delay_display"></span>
 					</div>
-            </fieldset>
+				</fieldset>
 					
 				<!-- Style -->
 				<div id="notifs_style">
-	            <span class="emphasis new_item" data-i18n-content="options_page_tab_popup_style_choose_style"></span>:
-	            <select id="notifs_style_chooser">
-	               <option value="sideways" data-i18n-content="options_page_tab_popup_style_style_sideways"></option>
-                  <option value="line" data-i18n-content="options_page_tab_notifs_style_style_line"></option>
-	            </select>
-	            
-                 <!-- Preview pane -->
-	            <div id="fake_notifs">
-		            <div id="fake_notifs_header">Deezer Control</div>
-		            <div id="preview_notifs"><!-- placeholder for preview pane --></div>
-               </div>
-              </div>
+					<span class="emphasis new_item" data-i18n-content="options_page_tab_popup_style_choose_style"></span>:
+					<select id="notifs_style_chooser">
+						<option value="sideways" data-i18n-content="options_page_tab_popup_style_style_sideways"></option>
+						<option value="line" data-i18n-content="options_page_tab_notifs_style_style_line"></option>
+					</select>
+					
+					<!-- Preview pane -->
+					<div id="fake_notifs">
+						<div id="fake_notifs_header">Deezer Control</div>
+						<div id="preview_notifs"><!-- placeholder for preview pane --></div>
+					</div>
+				</div>
 				
 				<div class="save_cancel_bar">
 					<button id="button_save_notifications" data-i18n-content="options_page_button_save"></button>
@@ -234,30 +234,30 @@
 				
 				<h2 data-i18n-content="options_page_tab_notifs_show_notifs_when_title"></h2>
 			</section>
-      
-      
-         <!-- Option tab: misc options -->
-         <section id="misc">
-            <h1 data-i18n-content="options_page_tab_misc_h1"></h1>
-            <div data-i18n-content="options_page_tab_misc_what_are_misc_options"></div>
-               
-            <h2 data-i18n-content="options_page_tab_misc_limit_deezer_to_one_tab_h2"></h2>
-            <div id="miscLimitDeezerToOneTab">
-               <div data-i18n-content="options_page_tab_misc_limit_deezer_to_one_tab_explanation"></div>
-               <div class="yes_no_bar">
-                  <button class="two_state_unselected" data-i18n-content="yes"></button>
-                  <button class="two_state_unselected" data-i18n-content="no"></button>
-               </div>
-            </div>
-            
-            <div class="save_cancel_bar">
-               <button id="button_save_misc" data-i18n-content="options_page_button_save"></button>
-               <button id="button_cancel_misc" data-i18n-content="options_page_button_cancel" class="button_cancel"></button>
-               <span id="status_misc"></span>
-            </div>
-         </section>
-         
-      </div>
+		
+		
+			<!-- Option tab: misc options -->
+			<section id="misc">
+				<h1 data-i18n-content="options_page_tab_misc_h1"></h1>
+				<div data-i18n-content="options_page_tab_misc_what_are_misc_options"></div>
+					
+				<h2 data-i18n-content="options_page_tab_misc_limit_deezer_to_one_tab_h2"></h2>
+				<div id="miscLimitDeezerToOneTab">
+					<div data-i18n-content="options_page_tab_misc_limit_deezer_to_one_tab_explanation"></div>
+					<div class="yes_no_bar">
+						<button class="two_state_unselected" data-i18n-content="yes"></button>
+						<button class="two_state_unselected" data-i18n-content="no"></button>
+					</div>
+				</div>
+				
+				<div class="save_cancel_bar">
+					<button id="button_save_misc" data-i18n-content="options_page_button_save"></button>
+					<button id="button_cancel_misc" data-i18n-content="options_page_button_cancel" class="button_cancel"></button>
+					<span id="status_misc"></span>
+				</div>
+			</section>
+			
+		</div>
 		
 			
 		<!-- footer -->
